force-app/main/default/objects/Book_In_Note__c/Book_In_Note__c.object-meta.xml
<CustomObject>
    <description>StarTrack consignment book-in notes.</description>
    <label>Book-In Note</label>
    <nameField>
        <label>Book-In Note ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Book-In Notes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>