force-app/main/default/objects/Book_In_Note__c/fields/By__c.field-meta.xml
<CustomField>
    <fullName>By__c</fullName>
    <label>By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>