force-app/main/default/objects/Book_In_Note__c/fields/Consignment__c.field-meta.xml
<CustomField>
    <fullName>Consignment__c</fullName>
    <label>Consignment</label>
    <referenceTo>Article__c</referenceTo>
    <relationshipLabel>Book-In Notes</relationshipLabel>
    <relationshipName>Book_In_Notes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>