force-app/main/default/objects/Book_In_Note__c/fields/Date_Entered__c.field-meta.xml
<CustomField>
    <fullName>Date_Entered__c</fullName>
    <label>Date Entered</label>
    <type>DateTime</type>
</CustomField>