force-app/main/default/objects/Book_In_Note__c/fields/Start_From_Str__c.field-meta.xml
<CustomField>
    <fullName>Start_From_Str__c</fullName>
    <label>Start From</label>
    <length>20</length>
    <type>Text</type>
</CustomField>